<resources>
    <string name="app_name">Sortir à Metz</string>
    <string name="latitude_label">"Latitude: "</string>
    <string name="longitude_label">Longitude:</string>
    <string name="category_name">Name: </string>
    <string name="empty_list">Empty list</string>
    <string name="category_list">Your categories</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="category_name_hint">Name of category</string>
    <string name="confirm_delete_category_msg">Are you sure you want to delete this category? Related POIs will be deleted too.</string>
    <string name="dialog_delete_category_title">Confirm category delete</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_field_is_empty">Please fill this field</string>
    <string name="error_category_not_unique">Category name should be unique</string>
    <string name="add_new_category">Add new category</string>
    <string name="poi_list">Your POIs</string>
    <string name="confirm_delete_poi_msg">Are you sure you want to delete this POI?</string>
    <string name="dialog_delete_poi_title">Confirm POI delete</string>
    <string name="require_category">You first need to create at least one category.</string>
    <string name="poi_name_hint">Name of POI</string>
    <string name="category">Category</string>
    <string name="resume">Resume:</string>
    <string name="postal_adress">Address:</string>
    <string name="center_to_my_location">Center the map to my current location</string>
    <string name="add_marker_to_my_location">Add a new marker on my current location</string>
    <string name="radius_in_meters">Circles radius in meter</string>
    <string name="input_circle_perimeter_label">"Please specify the circles radius in meter: "</string>
    <string name="ask_circle_perimeter_title">Search for locations around this point</string>
    <string name="dialog_show">Show</string>
    <string name="select_category_filter">Please select the category to show:</string>
    <string name="distanceLabel">{0}m</string>
    <string name="map">Map</string>
    <string name="categories">Categories</string>
    <string name="pois">POIs</string>
    <string name="add_category">Add a category</string>
    <string name="edit_category">Edit the category</string>
    <string name="add_poi">Add a POI</string>
    <string name="edit_poi">Edit the POI</string>
    <string name="coordinate_out_of_bound">Value should be between {0} and {1}</string>
    <string name="show_circle_aroud_me">show circle around my position</string>
    <string name="remove_circle_around_me">remove circle around my position</string>
    <string name="poi_latitude">POI latitude</string>
    <string name="poi_longitude">POI longitude</string>
    <string name="poi_postal_address">POI postal address</string>
    <string name="poi_resume">Resume of the POI</string>
    <string name="show_pois_detail">Show POIs detail</string>
    <string name="all_fields_are_mandatory">All fields are mandatory</string>
    <string name="search_hint">Search a location</string>
    <string name="invalid_number">The number has an invalid format, valid formats are \"1\", \"-1\", \"1.0\", or \"-1.0\".</string>
</resources>