<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_category_filter"
            android:textSize="@dimen/contentTextSize" />

        <Spinner
            android:id="@+id/categoryFilter"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/legende"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_circle_perimeter_label"
            android:textSize="@dimen/contentTextSize" />

        <EditText
            android:id="@+id/editCircleRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radius_in_meters"
            android:inputType="number|numberDecimal" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>