<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pois.fragments.PoiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/contentMargin"
            android:layout_marginEnd="@dimen/contentMargin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment"
                android:textSize="@dimen/titleTextSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameLabel"
                    android:layout_width="@dimen/textViewWidth"
                    android:layout_height="wrap_content"
                    android:text="@string/category_name"
                    android:textSize="@dimen/contentTextSize" />

                <EditText
                    android:id="@+id/poiName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/poi_name_hint"
                    android:inputType="textCapSentences"
                    android:textSize="@dimen/contentTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="@dimen/textViewWidth"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude_label"
                    android:textSize="@dimen/contentTextSize" />

                <EditText
                    android:id="@+id/poiLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/contentTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="@dimen/textViewWidth"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude_label"
                    android:textSize="@dimen/contentTextSize" />

                <EditText
                    android:id="@+id/poiLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/contentTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="@dimen/textViewWidth"
                    android:layout_height="wrap_content"
                    android:text="@string/postal_adress"
                    android:textSize="@dimen/contentTextSize" />

                <EditText
                    android:id="@+id/poiPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:textSize="@dimen/contentTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="@dimen/textViewWidth"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="@dimen/contentTextSize" />

                <Spinner
                    android:id="@+id/categoryDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="@dimen/textViewWidth"
                    android:layout_height="wrap_content"
                    android:text="@string/resume"
                    android:textSize="@dimen/contentTextSize" />

                <EditText
                    android:id="@+id/poiResume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/contentTextSize" />
            </LinearLayout>

        </LinearLayout>

        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:visibility="gone">

        </org.osmdroid.views.MapView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/poiCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#676666"
                android:text="@string/cancel"
                app:icon="@android:drawable/ic_menu_close_clear_cancel" />

            <Space
                android:layout_width="@dimen/spaceWidth"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/poiDeleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F44336"
                android:text="@string/delete"
                android:visibility="visible"
                app:icon="@android:drawable/ic_menu_delete" />

            <Space
                android:id="@+id/poiBtnSpace"
                android:layout_width="@dimen/spaceWidth"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/poiSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/save"
                app:icon="@android:drawable/ic_menu_save" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>