<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PoiListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/contentMargin"
        android:layout_marginEnd="@dimen/contentMargin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/poisTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poi_list"
            android:textSize="@dimen/titleTextSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/poiList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addPoiButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                android:contentDescription="@string/add_new_category"
                android:src="@android:drawable/ic_input_add" />

            <TextView
                android:id="@+id/informationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_list"
                android:textSize="34sp" />

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>